fixed blog title and blog title in-post aligning (for the 10th time...)

--- a/_sass/basscss/_utility-white-space.scss
+++ b/_sass/basscss/_utility-white-space.scss
@@ -159,7 +159,7 @@
 }
 
 .py3 {
-  padding-top: 1.5rem;
+  margin-top: 28.8px;
   padding-bottom: $space-3;
 }
 
